# PeakScope

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
PeakScope/: monitor.py
pyinspector/: __init__.py
